--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Pink Panther</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="panthere.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div class="div_titre">
@@ -40,6 +40,6 @@
 
 
 
-	<script src="panthere.js"></script>
+	
 </body>
 </html>
