--- a/index.html
+++ b/index.html
@@ -6,16 +6,28 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div class="div_titre">
-		Le Site Officiel de la Panthère Rose
-	</div>
+	<center>
+		<div class="div_titre">
+			Le Site Officiel de la Panthère Rose
+		</div>
+	</center>
 	<img class="img_p1" src="https://prodigits.co.uk/thumbs/wallpapers/p2/misc/44/59c7c69712449259.jpg">
+
+	<button class="btn_bulletin">
+	
+		<a href="https://art-dev16.github.io/PinkP/Lettre%20panth%C3%A8re.pdf">
+				Téléchargez ici son bulletin scolaire
+		</a>
+	</button>
+
 	<div class="box_droite">
-		<span class="actus">
-			<b>
-				-Actualités-
-			</b>
-		</span>
+		<center>
+			<span class="actus">
+				<b>
+					-Actualités-
+				</b>
+			</span>
+		</center>
 
 		<span class="article">
 			Dernières nouvelles : <br> <br>
@@ -26,11 +38,12 @@
 			La guerre de l'indépandance de l'île aux panthères a pris fin ce mercredi. <br>
 			ps : bonne fête à Marie-Joseph ma maman. <br> <br>
 
-			La super panthère du jour à aidé des marmottes à fuir pendant l'éruption du Sakurajima au Japon. <br> <br>
+			La super panthère du jour a aidé des marmottes à fuir pendant l'éruption du Sakurajima au Japon. <br> <br>
 
 			Rejoignez le club Fitness et Souplesse. C'est tous les samedi de 14h à 16h. Vous aussi devenez souple comme jamais! <br> <br>
 
-			Une panthère rose ayant la trisomie 21 témoigne. Venez l'écouter sur la radio FranceRose.  
+			Une panthère rose ayant la trisomie 21 témoigne. Venez l'écouter sur la radio FranceRose. 
+			
 
 
 		</span>
