--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 		</a>
 	</button>
 
+	<button class="btn_assoss">
+		Rejoindre L'association des panthères roses
+	</button>
+
 	<div class="box_droite">
 		<center>
 			<span class="actus">
