--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 		Rejoindre L'association des panthères roses
 	</button>
 
+	<button class="cours" id="cours" onclick="cours()">
+		Apprennez à être une vraie panthère !
+		<a href="essai.html"></a>
+		
+	</button>
+
 	<button class="valider" id="valider" onclick="valider()">
 		Valider
 	</button>
@@ -34,7 +40,9 @@
 			</b>
 		</p>
 	</div>
+
 	
+
 	<button class="btn_planning" id="btn_planning">
 		<a href="https://art-dev16.github.io/PinkP/Le%20planning%20pp.pdf">
 				Téléchargez ici le planning des Pink Panthers ! 
