--- a/cours.html
+++ b/cours.html
@@ -14,7 +14,7 @@
 		</b>
 		
 	</span>
-	<a href="index.html">
+	<a href="https://art-dev16.github.io/PinkP/index.html">
 	<img class="home" src="https://findicons.com/files/icons/1580/devine_icons_part_2/512/home.png">
 	</a>
 
