--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	<button class="cours" id="cours" onclick="cours()">
 		Apprennez à être une vraie panthère !
-		<a href="essai.html"></a>
+		<a href="https://art-dev16.github.io/PinkP/cours.html"></a>
 		
 	</button>
 
